--- a/styles.css
+++ b/styles.css
@@ -164,9 +164,12 @@ body {
     line-height: 1.5;
 }
 
-#zmienneOprocentowanieLabel,
-#nadplataKredytuLabel {
+#zmienneOprocentowanieLabel {
     font-size: 0.7em !important;
+}
+
+#nadplataKredytuLabel {
+    font-size: 0.6em !important;
 }
 
 .checkbox-label input {
